--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -43,6 +43,7 @@
         <akka-management.version>1.0.10</akka-management.version>
         <akka-stream-kafka.version>2.1.1</akka-stream-kafka.version>
         <kafka-client.version>2.8.1</kafka-client.version>
+        <nats-client.version>2.12.1</nats-client.version>
         <hivemq-mqtt-client.version>1.2.2</hivemq-mqtt-client.version>
         <sshd.version>2.7.0</sshd.version>
         <eddsa.version>0.3.0</eddsa.version>
@@ -273,6 +274,12 @@
                 <groupId>commons-net</groupId>
                 <artifactId>commons-net</artifactId>
                 <version>${commons-net.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.nats</groupId>
+                <artifactId>jnats</artifactId>
+                <version>${nats-client.version}</version>
             </dependency>
 
             <!-- ### Indirect "runtime" dependencies we want to pin to a common version -->
